--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 DB_URI= # Connection URI to MongoDB
 JWT_SECRET = # jwt-key
+
+
+MAILTRAP_USERNAME = # MAILTRAP username
+ MAILTRAP_PASSWORD = # MAILTRAP password
